k8s/media-manager/prowlarr/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-deployment
  namespace: media-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      dnsPolicy: "None" # This is the key. It tells the pod not to use the host's DNS.
      dnsConfig:
        nameservers:
          - "1.1.1.1" # Cloudflare DNS
          - "8.8.8.8" # Google DNS
      securityContext:
        # IMPORTANT: This forces the container to run as 'mediaowner' (1302)
        # to ensure it has permission to read/write to the NFS share.
        runAsUser: 1302
        runAsGroup: 1302
        fsGroup: 1302
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
          volumeMounts:
            # Mount Prowlarr's private config storage
            - name: config-storage
              mountPath: /config
            # Mount the SHARED media storage from the Jellyfin PVC
            - name: data-storage
              mountPath: /data
      volumes:
        - name: config-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data/config/prowlarr
        # This is direct NFS mount for sharing data across multiple namespace
        - name: data-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data/contents/public
