k8s/media-manager/prowlarr/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: media-manager
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
