k8s/media-manager/prowlarr/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingressroute
  namespace: media-manager
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.localdev`)
      kind: Rule
      services:
        - name: prowlarr-service
          port: 9696
